ios/include/FlutterFilamentApi.h

typedef int32_t EntityId;
FLUTTER_PLUGIN_EXPORT void render(
					     const void* const viewer, 
					     uint64_t frameTimeInNanos, 
					     void* pixelBuffer, 
					     void (*callback)(void *buf, size_t size, void *data), 
					     void* data
					 );
FLUTTER_PLUGIN_EXPORT void create_swap_chain(const void* const viewer, const void* const window, uint32_t width, uint32_t height);
FLUTTER_PLUGIN_EXPORT void destroy_swap_chain(const void* const viewer);
FLUTTER_PLUGIN_EXPORT void set_frame_interval(const void* const viewer, float interval);
FLUTTER_PLUGIN_EXPORT void update_viewport_and_camera_projection(const void* const viewer, uint32_t width, uint32_t height, float scaleFactor);
FLUTTER_PLUGIN_EXPORT void scroll_begin(const void* const viewer);
FLUTTER_PLUGIN_EXPORT void scroll_update(const void* const viewer, float x, float y, float z);
FLUTTER_PLUGIN_EXPORT void scroll_end(const void* const viewer);
FLUTTER_PLUGIN_EXPORT void grab_begin(const void* const viewer, float x, float y, bool pan);
FLUTTER_PLUGIN_EXPORT void grab_update(const void* const viewer, float x, float y);
FLUTTER_PLUGIN_EXPORT void grab_end(const void* const viewer);
FLUTTER_PLUGIN_EXPORT void apply_weights(
					     void* assetManager,
					     EntityId asset, 
					     const char *const entityName, 
					     float *const weights, 
					     int count
					 );
FLUTTER_PLUGIN_EXPORT bool set_morph_animation(
					     void* assetManager,
					     EntityId asset,
					     const char *const entityName,
					     const float *const morphData,
					     const int* const morphIndices,
					     int numMorphTargets,
					     int numFrames,
					     float frameLengthInMs);
FLUTTER_PLUGIN_EXPORT void set_bone_animation(
                            void* assetManager,
                            EntityId asset, 
                            const float* const frameData,
                            int numFrames, 
                            int numBones,
                            const char** const boneNames,
                            const char** const meshName,
                            int numMeshTargets,
                            float frameLengthInMs);
FLUTTER_PLUGIN_EXPORT void play_animation(void* assetManager, EntityId asset, int index, bool loop, bool reverse, bool replaceActive, float crossfade);
FLUTTER_PLUGIN_EXPORT void set_animation_frame(void* assetManager, EntityId asset, int animationIndex, int animationFrame);
FLUTTER_PLUGIN_EXPORT void stop_animation(void* assetManager, EntityId asset, int index);
FLUTTER_PLUGIN_EXPORT int get_animation_count(void* assetManager, EntityId asset);
FLUTTER_PLUGIN_EXPORT void get_animation_name(void* assetManager, EntityId asset, char *const outPtr, int index);
FLUTTER_PLUGIN_EXPORT void get_morph_target_name(void* assetManager, EntityId asset, const char *meshName, char *const outPtr, int index);
FLUTTER_PLUGIN_EXPORT int get_morph_target_name_count(void* assetManager, EntityId asset, const char *meshName);