lib/generated_bindings.dart


  void create_swap_chain(
    ffi.Pointer<ffi.Void> viewer,
    ffi.Pointer<ffi.Void> surface,
    int width,
    int height,
  ) {
    return _create_swap_chain(
      viewer,
      surface,
      width,
      height,
    );
  }

  late final _create_swap_chainPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
              ffi.Uint32, ffi.Uint32)>>('create_swap_chain');
  late final _create_swap_chain = _create_swap_chainPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, int, int)>();

  void destroy_swap_chain(
    ffi.Pointer<ffi.Void> viewer,
  ) {
    return _destroy_swap_chain(
      viewer,
    );
  }

  late final _destroy_swap_chainPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'destroy_swap_chain');
  late final _destroy_swap_chain =
      _destroy_swap_chainPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void set_frame_interval(
    ffi.Pointer<ffi.Void> viewer,
    double interval,
  ) {
    return _set_frame_interval(
      viewer,
      interval,
    );
  }

  late final _set_frame_intervalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>, ffi.Float)>>('set_frame_interval');
  late final _set_frame_interval = _set_frame_intervalPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();

  ffi.Pointer<ffi.Void> get_renderer(
    ffi.Pointer<ffi.Void> viewer,
  ) {
    return _get_renderer(
      viewer,
    );
  }

  late final _get_rendererPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>)>>('get_renderer');
  late final _get_renderer = _get_rendererPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();

  void update_viewport_and_camera_projection(
    ffi.Pointer<ffi.Void> viewer,
    int width,
    int height,
    double scaleFactor,
  ) {
    return _update_viewport_and_camera_projection(
      viewer,
      width,
      height,
      scaleFactor,
    );
  }

  late final _update_viewport_and_camera_projectionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int, ffi.Int,
              ffi.Float)>>('update_viewport_and_camera_projection');
  late final _update_viewport_and_camera_projection =
      _update_viewport_and_camera_projectionPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, int, int, double)>();

  void scroll_begin(
    ffi.Pointer<ffi.Void> viewer,
  ) {
    return _scroll_begin(
      viewer,
    );
  }

  late final _scroll_beginPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'scroll_begin');
  late final _scroll_begin =
      _scroll_beginPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void scroll_update(
    ffi.Pointer<ffi.Void> viewer,
    double x,
    double y,
    double z,
  ) {
    return _scroll_update(
      viewer,
      x,
      y,
      z,
    );
  }

  late final _scroll_updatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float,
              ffi.Float)>>('scroll_update');
  late final _scroll_update = _scroll_updatePtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, double, double, double)>();

  void scroll_end(
    ffi.Pointer<ffi.Void> viewer,
  ) {
    return _scroll_end(
      viewer,
    );
  }

  late final _scroll_endPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'scroll_end');
  late final _scroll_end =
      _scroll_endPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void grab_begin(
    ffi.Pointer<ffi.Void> viewer,
    double x,
    double y,
    int pan,
  ) {
    return _grab_begin(
      viewer,
      x,
      y,
      pan,
    );
  }

  late final _grab_beginPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float,
              ffi.Int)>>('grab_begin');
  late final _grab_begin = _grab_beginPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, double, double, int)>();

  void grab_update(
    ffi.Pointer<ffi.Void> viewer,
    double x,
    double y,
  ) {
    return _grab_update(
      viewer,
      x,
      y,
    );
  }

  late final _grab_updatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float)>>('grab_update');
  late final _grab_update = _grab_updatePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, double, double)>();

  void grab_end(
    ffi.Pointer<ffi.Void> viewer,
  ) {
    return _grab_end(
      viewer,
    );
  }

  late final _grab_endPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'grab_end');
  late final _grab_end =
      _grab_endPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void apply_weights(
    ffi.Pointer<ffi.Void> assetManager,
    int asset,
    ffi.Pointer<ffi.Char> entityName,
    ffi.Pointer<ffi.Float> weights,
    int count,
  ) {
    return _apply_weights(
      assetManager,
      asset,
      entityName,
      weights,
      count,
    );
  }

  late final _apply_weightsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>,
              EntityId,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Float>,
              ffi.Int)>>('apply_weights');
  late final _apply_weights = _apply_weightsPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Float>, int)>();

  void set_morph_animation(
    ffi.Pointer<ffi.Void> assetManager,
    int asset,
    ffi.Pointer<ffi.Char> entityName,
    ffi.Pointer<ffi.Float> morphData,
    int numMorphWeights,
    int numFrames,
    double frameLengthInMs,
  ) {
    return _set_morph_animation(
      assetManager,
      asset,
      entityName,
      morphData,
      numMorphWeights,
      numFrames,
      frameLengthInMs,
    );
  }

  late final _set_morph_animationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>,
              EntityId,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Float>,
              ffi.Int,
              ffi.Int,
              ffi.Float)>>('set_morph_animation');
  late final _set_morph_animation = _set_morph_animationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Float>, int, int, double)>();

  void set_bone_animation(
    ffi.Pointer<ffi.Void> assetManager,
    int asset,
    int length,
    ffi.Pointer<ffi.Pointer<ffi.Char>> boneNames,
    ffi.Pointer<ffi.Pointer<ffi.Char>> meshNames,
    ffi.Pointer<ffi.Float> frameData,
    int numFrames,
    double frameLengthInMs,
  ) {
    return _set_bone_animation(
      assetManager,
      asset,
      length,
      boneNames,
      meshNames,
      frameData,
      numFrames,
      frameLengthInMs,
    );
  }

  late final _set_bone_animationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>,
              EntityId,
              ffi.Int,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Float>,
              ffi.Int,
              ffi.Float)>>('set_bone_animation');
  late final _set_bone_animation = _set_bone_animationPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Void>,
          int,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Float>,
          int,
          double)>();

  void play_animation(
    ffi.Pointer<ffi.Void> assetManager,
    int asset,
    int index,
    int loop,
    int reverse,
  ) {
    return _play_animation(
      assetManager,
      asset,
      index,
      loop,
      reverse,
    );
  }

  late final _play_animationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Int, ffi.Int,
              ffi.Int)>>('play_animation');
  late final _play_animation = _play_animationPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int, int, int, int)>();

  void set_animation_frame(
    ffi.Pointer<ffi.Void> assetManager,
    int asset,
    int animationIndex,
    int animationFrame,
  ) {
    return _set_animation_frame(
      assetManager,
      asset,
      animationIndex,
      animationFrame,
    );
  }

  late final _set_animation_framePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId, ffi.Int,
              ffi.Int)>>('set_animation_frame');
  late final _set_animation_frame = _set_animation_framePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int, int, int)>();

  void stop_animation(
    ffi.Pointer<ffi.Void> assetManager,
    int asset,
    int index,
  ) {
    return _stop_animation(
      assetManager,
      asset,
      index,
    );
  }

  late final _stop_animationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>, EntityId, ffi.Int)>>('stop_animation');
  late final _stop_animation = _stop_animationPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int, int)>();

  int get_animation_count(
    ffi.Pointer<ffi.Void> assetManager,
    int asset,
  ) {
    return _get_animation_count(
      assetManager,
      asset,
    );
  }

  late final _get_animation_countPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Void>, EntityId)>>('get_animation_count');
  late final _get_animation_count = _get_animation_countPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  void get_animation_name(
    ffi.Pointer<ffi.Void> assetManager,
    int asset,
    ffi.Pointer<ffi.Char> outPtr,
    int index,
  ) {
    return _get_animation_name(
      assetManager,
      asset,
      outPtr,
      index,
    );
  }

  late final _get_animation_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, EntityId,
              ffi.Pointer<ffi.Char>, ffi.Int)>>('get_animation_name');
  late final _get_animation_name = _get_animation_namePtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Char>, int)>();

  void get_morph_target_name(
    ffi.Pointer<ffi.Void> assetManager,
    int asset,
    ffi.Pointer<ffi.Char> meshName,
    ffi.Pointer<ffi.Char> outPtr,
    int index,
  ) {
    return _get_morph_target_name(
      assetManager,
      asset,
      meshName,
      outPtr,
      index,
    );
  }

  late final _get_morph_target_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>,
              EntityId,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int)>>('get_morph_target_name');
  late final _get_morph_target_name = _get_morph_target_namePtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int)>();

  int get_morph_target_name_count(
    ffi.Pointer<ffi.Void> assetManager,
    int asset,
    ffi.Pointer<ffi.Char> meshName,
  ) {
    return _get_morph_target_name_count(
      assetManager,
      asset,
      meshName,
    );
  }

  late final _get_morph_target_name_countPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, EntityId,
              ffi.Pointer<ffi.Char>)>>('get_morph_target_name_count');
  late final _get_morph_target_name_count =
      _get_morph_target_name_countPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Char>)>();
